in research arima, fix predict avr salary

--- a/study/coursera_hypothesis/ confidence_intervals.ipynb
+++ b/study/coursera_hypothesis/ confidence_intervals.ipynb
@@ -1157,6 +1157,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'random_sample' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-9024ce3d5834>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mrandom_sample\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'random_sample' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "random_sample"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2429,6 +2450,26 @@
    "source": [
     "print('95%% confidence interval for times decrease of infarction: %s' %\n",
     "      str(stat_intervals(odds_placebo_data / odds_aspirin_data, 0.05)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "75.4667250218135"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.541433 / 0.00717446"
    ]
   },
   {
