--- a/study/coursera_hypothesis/binomial_test_with_plots.ipynb
+++ b/study/coursera_hypothesis/binomial_test_with_plots.ipynb
@@ -140,8 +140,26 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'stats' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[1;32m<ipython-input-1-fc239b18cbbd>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[1;32m----> 1\u001B[1;33m \u001B[0mstats\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mbinom_test\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;36m12\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;36m16\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;36m0.5\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0malternative\u001B[0m \u001B[1;33m=\u001B[0m \u001B[1;34m'greater'\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m: name 'stats' is not defined"
+     ]
+    }
+   ],
    "source": [
     "stats.binom_test(12, 16, 0.5, alternative = 'greater')"
    ]
