--- a/study/coursera_hypothesis/credit_scoring_hypothesis.ipynb
+++ b/study/coursera_hypothesis/credit_scoring_hypothesis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
        "[8 rows x 25 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +625,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -830,6 +830,37 @@
     "\n",
     "print(f'95% дов. интервал медианного зн-я «LIMIT_BAL» для «default» = 0: [{limit_bar_0_cnt_s[l_ind_0]}, {limit_bar_0_cnt_s[u_ind_0]}]')\n",
     "print(f'95% дов. интервал медианного зн-я «LIMIT_BAL» для «default» = 1: [{limit_bar_1_cnt_s[l_ind_1]}, {limit_bar_1_cnt_s[u_ind_1]}]')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2         90000\n",
+       "3         50000\n",
+       "4         50000\n",
+       "5         50000\n",
+       "6        500000\n",
+       "          ...  \n",
+       "29990    140000\n",
+       "29992     10000\n",
+       "29993    100000\n",
+       "29995    220000\n",
+       "29996    150000\n",
+       "Name: LIMIT_BAL, Length: 23364, dtype: int64"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "limit_bar_0_cnt"
    ]
   },
   {
