--- a/research_ML/research_my_dear_watson.ipynb
+++ b/research_ML/research_my_dear_watson.ipynb
@@ -2,13 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
+    "import zipfile\n",
     "\n",
     "try:\n",
     "    from configs import settings\n",
@@ -18,18 +17,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "os.environ['KAGGLE_USERNAME'] = settings.KAGGLE_USERNAME\n",
-    "os.environ['KAGGLE_KEY'] = settings.KAGGLE_KEY\n",
-    "os.environ['KAGGLE_PROXY'] = settings.KAGGLE_PROXY"
+    "os.environ['KAGGLE_KEY'] = settings.KAGGLE_KEY"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# !pip install kaggle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -40,58 +51,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting kaggle\n",
-      "  Downloading https://files.pythonhosted.org/packages/3a/e7/3bac01547d2ed3d308ac92a0878fbdb0ed0f3d41fb1906c319ccbba1bfbc/kaggle-1.5.12.tar.gz (58kB)\n",
-      "Requirement already satisfied: six>=1.10 in c:\\users\\lazpr\\pycharmprojects\\basicofstatistic\\env\\lib\\site-packages (from kaggle) (1.15.0)\n",
-      "Requirement already satisfied: certifi in c:\\users\\lazpr\\pycharmprojects\\basicofstatistic\\env\\lib\\site-packages (from kaggle) (2020.12.5)\n",
-      "Requirement already satisfied: python-dateutil in c:\\users\\lazpr\\pycharmprojects\\basicofstatistic\\env\\lib\\site-packages (from kaggle) (2.8.1)\n",
-      "Requirement already satisfied: requests in c:\\users\\lazpr\\pycharmprojects\\basicofstatistic\\env\\lib\\site-packages (from kaggle) (2.25.1)\n",
-      "Requirement already satisfied: tqdm in c:\\users\\lazpr\\pycharmprojects\\basicofstatistic\\env\\lib\\site-packages (from kaggle) (4.54.1)\n",
-      "Collecting python-slugify (from kaggle)\n",
-      "  Downloading https://files.pythonhosted.org/packages/7e/e2/0c8be1e3b237d11f10963c7cef82e4d98d70ca6e176f3922dddf7bfc7026/python_slugify-5.0.2-py2.py3-none-any.whl\n",
-      "Requirement already satisfied: urllib3 in c:\\users\\lazpr\\pycharmprojects\\basicofstatistic\\env\\lib\\site-packages (from kaggle) (1.26.3)\n",
-      "Requirement already satisfied: chardet<5,>=3.0.2 in c:\\users\\lazpr\\pycharmprojects\\basicofstatistic\\env\\lib\\site-packages (from requests->kaggle) (4.0.0)\n",
-      "Requirement already satisfied: idna<3,>=2.5 in c:\\users\\lazpr\\pycharmprojects\\basicofstatistic\\env\\lib\\site-packages (from requests->kaggle) (2.10)\n",
-      "Collecting text-unidecode>=1.3 (from python-slugify->kaggle)\n",
-      "  Downloading https://files.pythonhosted.org/packages/a6/a5/c0b6468d3824fe3fde30dbb5e1f687b291608f9473681bbf7dabbf5a87d7/text_unidecode-1.3-py2.py3-none-any.whl (78kB)\n",
-      "Building wheels for collected packages: kaggle\n",
-      "  Building wheel for kaggle (setup.py): started\n",
-      "  Building wheel for kaggle (setup.py): finished with status 'done'\n",
-      "  Stored in directory: C:\\Users\\lazpr\\AppData\\Local\\pip\\Cache\\wheels\\a1\\6a\\26\\d30b7499ff85a4a4593377a87ecf55f7d08af42f0de9b60303\n",
-      "Successfully built kaggle\n",
-      "Installing collected packages: text-unidecode, python-slugify, kaggle\n",
-      "Successfully installed kaggle-1.5.12 python-slugify-5.0.2 text-unidecode-1.3\n"
+      "contradictory-my-dear-watson.zip: Skipping, found more recently modified local copy (use --force to force download)\n"
      ]
     }
    ],
    "source": [
-    "# !pip install kaggle"
+    "dir_download = \"data\"\n",
+    "\n",
+    "os.makedirs(dir_download, exist_ok=True)\n",
+    "!cd $dir_download && kaggle competitions download -c contradictory-my-dear-watson\n",
+    "\n",
+    "\n",
+    "file_zip = os.path.join(dir_download, os.listdir(dir_download)[0])\n",
+    "with zipfile.ZipFile(file_zip) as file:\n",
+    "    file.extractall(dir_download)\n",
+    "os.remove(file_zip)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "import kaggle as kg\n",
-    "import pandas as pd"
-   ],
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "### Files\n",
+    "* __train.csv__: This file contains the ID, premise, hypothesis, and label, as well as the language of the text and its two-letter abbreviation\n",
+    "* __test.csv__: This file contains the ID, premise, hypothesis, language, and language abbreviation, without labels.\n",
+    "* __sample_submission.csv__: This is a sample submission file in the correct format: id: a unique identifier for each sample label: the classification of the relationship between the premise and hypothesis (0 for entailment, 1 for neutral, 2 for contradiction)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import kaggle as kg\n",
-    "import pandas as pd"
-   ]
+   "source": []
   }
  ],
  "metadata": {
