--- a/research_ML/research_my_dear_watson.ipynb
+++ b/research_ML/research_my_dear_watson.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -40,21 +40,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "contradictory-my-dear-watson.zip: Skipping, found more recently modified local copy (use --force to force download)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dir_download = \"data\"\n",
     "\n",
@@ -77,9 +69,9 @@
    },
    "source": [
     "### Files\n",
-    "* __train.csv__: This file contains the ID, premise, hypothesis, and label, as well as the language of the text and its two-letter abbreviation\n",
-    "* __test.csv__: This file contains the ID, premise, hypothesis, language, and language abbreviation, without labels.\n",
-    "* __sample_submission.csv__: This is a sample submission file in the correct format: id: a unique identifier for each sample label: the classification of the relationship between the premise and hypothesis (0 for entailment, 1 for neutral, 2 for contradiction)"
+    "* *train.csv*: This file contains the ID, premise, hypothesis, and label, as well as the language of the text and its two-letter abbreviation\n",
+    "* *test.csv*: This file contains the ID, premise, hypothesis, language, and language abbreviation, without labels.\n",
+    "* *sample_submission.csv*: This is a sample submission file in the correct format: id: a unique identifier for each sample label: the classification of the relationship between the premise and hypothesis (0 for entailment, 1 for neutral, 2 for contradiction)"
    ]
   },
   {
